<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/container"
        app:srcCompat="@drawable/ic_car" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/shape_edit_text"
        android:padding="20dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewParameters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:text="@string/car_parameters" />

        <EditText
            android:id="@+id/editTextModel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_edit_text"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/model" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_edit_text"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/number" />

        <EditText
            android:id="@+id/editTextYear"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_edit_text"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/year_production" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:textColor="@color/white"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/add" />

        <Button
            android:id="@+id/buttonShowList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:textColor="@color/white"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/show_car_list" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewErrors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/author" />
</androidx.constraintlayout.widget.ConstraintLayout>